# pdf-nup

./: .gitignore  README.md  pyproject.toml
src/pdf_nup/: __init__.py  cli.py  nup.py
